# zephyrproject

./: .gitignore  CMakeLists.txt  Kcofig  Kconfig  prj.conf
.cache/clangd/index/: Main.cpp.F83A216068E750FF.idx  gpintrr.c.81E1C50EB6269DA6.idx  gpintrr.h.EE3C7EAA3F6A3CE3.idx  led17.c.FEEE63CE071FFDAD.idx  led17.h.E4A57B86C8342601.idx  tim.c.D41F6BC78D33E2B0.idx  tim.h.BB3D29725BAD88FB.idx
.github/workflows/: c-cpp.yml  flash.yml  manual.yml
boards/: esp32_common.overlay  esp32_devkitc_wroom.overlay
boards/espressif/: esp32_common.overlay
boards/espressif/my_esp32/: Kconfig  (+9 more)
dac/: CMakeLists.txt  Kconfig  dacone.c
dac/include/: dacone.h
dac/zephyr/: module.yaml
drivers/: CMakeLists.txt  Kconfig  drivOne.c  driveOne.c
drivers/blue/: BlueOne.cpp  CMakeLists.txt  Kconfig  Kconfig.blue
drivers/drivOne/: CMakeLists.txt  Kconfig  Kconfig.driveone  Kconfig.drivone  Kconfig.gpio_led  driveOne.c  driveOne.yaml  gpio_esp32.c
drivers/gpio/: CMakeLists.txt  Kconfig  driveOne.c  driveOne.yaml
drivers/i2c/: CMakeLists.txt  Kconfig  Kconfig.itwoc  itwoc.c
drivers/include/: driveOne.h
drivers/zephyr/: module.yaml
gpio/: CMakeLists.txt  Kconfig  led17.c
gpio/include/: led17.h
gpio/zephyr/: module.yaml
interrupt/: CMakeLists.txt  Kconfig  gpintrr.c
interrupt/include/: gpintrr.h
interrupt/zephyr/: module.yaml
mytimers/: CMakeLists.txt  Kconfig
mytimers/include/: tim.h
mytimers/zephyr/: module.yaml
pwmle/: CMakeLists.txt  Kconfig  first.c
pwmle/include/: first.h
src/: Main.c  Main.cpp  Mainoneee.c  main.cpp
west-manifest/: west.yml
(+16 files in other folders)
